building up the paper documents

--- a/R/introduction.Rmd
+++ b/R/introduction.Rmd
@@ -6,7 +6,7 @@ This current state of affairs has subjected microsimulation models to criticism 
 
 This approach to health policy modeling has a number of important shortcomings. First, despite modelers' attempts to caveat the high degree of uncertainty in their estimates, modeled projections are often afforded a false sense of precision in high-stakes policy debates. This results in decisions being made in spite of a high degree of uncertainty surrounding the budgetary, health and coverage impact of proposed reforms. Second, the "black box"-like opacity of microsimulation models makes it difficult for researchers to know whether and how their work can inform  modeling efforts. Finally, the development, execution, and maintenance costs of microsimulation models are  considerable. Combined, these factors contribute to high barriers to understanding and a muddled sense of how the health economic and policy research enterprise could be further refined to improve policy decision making. 
 
-This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This framework has roots in health economic modeling methods used worldwide for health technology assessment, and in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework can encompass many existing approaches to health policy microsimulation, but also facilitates simple yet powerful counterfactual policy aassessments based on reduced form estimates. That is, the framework provides researchers with a simple tool to investigate the coverage and cost impacts of  reform alternatives without the need for a detailed individual-level microsimulation model.  As a proof of concept, I demonstrate how differences-in-differences evidence on the impact of Medicaid expansion on coverage, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of further expansion of coverage via public programs versus via increased subsidies for private coverage. 
+This study outlines an approach to ex ante policy evaluation that addresses many of the above shortcomings. First, I outline a generalized discrete time modeling framework for assessing the cost, coverage and welfare impact of health reform policies. This framework has roots in health economic modeling methods commonly used for health technology assessment, and in the "sufficient statistics" approach to welfare evaluation developed in public finance. I demonstrate that this modeling framework can encompass many existing approaches to health policy microsimulation, but also facilitates simple yet powerful counterfactual policy aassessments based on reduced form estimates. That is, the framework provides researchers with a simple tool to investigate the coverage and cost impacts of  reform alternatives without the need for a detailed individual-level microsimulation model.  As a proof of concept, I demonstrate how differences-in-differences evidence on the impact of Medicaid expansion on coverage, combined with regression-discontinuity estimates on willingness to pay for subsidized health insurance (Finkelstein, Hendren and Shepard 2019) can be harnessed to model the impact of further expansion of coverage via public programs versus via increased subsidies for private coverage. 
 
 Second, within this framework I tie together diverse approaches to assessing uncertainty and the welfare impacts of policy. Specifically, I draw linkages between standard wefare impact measures used in health technology assessment (e.g., net health benefit and net monetary benefit) and the marginal value of public funds (MVPFs), a summary measure of the costs and benefits of public policies  (Hendren 2017). This linkage allows for a systematic approach to understanding parameter and modeling uncertainty based on probalistic sensitivity anlayses (PSAs) and value of information (VOI) methods. 
 
